# protobuf-test

./: CMakeLists.txt  example.proto  generate_python.sh  main.cc  main.py
.github/workflows/: cmake.yml
